# ESP32-S3R8-CLAW

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  partitions.csv  sdkconfig.defaults.esp32s3
components/claw/: CMakeLists.txt  claw.c  claw.h  ec_config_internal.h
components/claw/channel/: ec_channel_feishu.c  ec_channel_openclaw.c  ec_channel_openclaw.h  ec_channel_reg.inc  ec_channel_ws.c
components/claw/core/: ec_agent.c  ec_agent.h  ec_channel.c  ec_channel.h  ec_memory.c  ec_memory.h  ec_session.c  ec_session.h  ec_skill_loader.c  ec_skill_loader.h  ec_tools.c  ec_tools.h
components/claw/llm/: ec_llm.c  ec_llm.h  ec_llm_internal.h  ec_llm_openai.c  ec_llm_openai.h
components/claw/test/: CMakeLists.txt  partitions.csv
components/claw/test/core/: test_agent_contract.c  test_memory_contract.c  test_session_contract.c
components/claw/test/llm/: test_llm_contract.c  test_llm_openai_json.c
components/claw/test/support/: ec_test_fs.c  ec_test_hooks.h
components/claw/test/tools/: test_tool_cron.c  test_tool_web_search.c  test_tools_contract.c
components/claw/tools/: ec_tools_reg.inc  tools_cron.c  tools_device_status.c  tools_files.c  tools_get_time.c  tools_web_search.c
components/embed_claw/: CMakeLists.txt  ec_config_internal.h  embed_claw.c  idf_component.yml
components/embed_claw/channel/: ec_channel_feishu.c  ec_channel_feishu.h  ec_channel_ws.c
main/: CMakeLists.txt  claw_config.h  main.c  wifi_connect.cpp
scripts/: collect_unity_results.py  feishu_relay.py  run_unit_tests.sh  run_unit_tests_ci.sh
spiffs_data/config/: SOUL.md
(+19 files in other folders)
